feat: configure subscription addresses and short IDs
